# bayesmech-vision

./: .gitignore  README.md
analysis/: segmentation.ipynb
android/: build.gradle
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
llms/: AR_DASHBOARD_SUMMARY.md  ASYNC_TIMING_FIX.md  BUILD_FIXES_AND_STREAMING.md  CAMERA_CAPTURE_FIX.md  CONNECTION_FLOW.md  DASHBOARD_FIX.md  DASHBOARD_README.md  DASHBOARD_VISUAL_PREVIEW.txt  DEBUGGING_GUIDE.md  DEBUGGING_IMPLEMENTATION.md  DEBUG_BLACK_IMAGES.md  DEPTH_STREAMING_ENABLED.md  ENHANCED_DEBUGGING.md  FIXING_403_ERROR.md  HTTP_101_EXPLAINED.md  INDEPENDENT_STREAMS_IMPLEMENTED.md  QUICKSTART.md  (+3 more)
server/: .gitignore  README.md  config.yaml  generate_proto.sh  main.py  playback.py  pyproject.toml  requirements.txt  restart_server.sh  segmentation_client.py  setup.sh  start_server.sh  test_connectivity.sh  test_server.sh  vision_stream.py
server/buffer/: __init__.py  client_manager.py  frame_buffer.py
server/data/: ar_inference.db
server/processing/: __init__.py  motion_analysis.py  pipeline.py  reconstruction_3d.py  segmentation.py  tracking.py
server/proto/: __init__.py  ar_stream.proto  ar_stream_pb2.py
server/proto/proto/: ar_stream_pb2.py
server/segmentation/: annotate_recording.py  segmentation_config.yaml  segmentation_server.py  segmentation_service.py
server/static/: upload.js
server/storage/: __init__.py  database.py  schema.sql
server/streamlog/: annotator.py  config.yaml  dashboard_bridge.py  frame_store.py  main.py  protoio.py
server/templates/: dashboard.html
(+155 files in other folders)
